static/styles/forms.css
body {
  background-color: seashell;
  font-family: 'Open Sans', sans-serif;
}

main {
  background-color: rgba(255, 255, 255, 0.7);
  padding-top: 0.4em;
  padding-left: 0.2em;
  padding-right: 0.2em;
  padding-bottom: 0.4em;
}

h1 {
  font-size: larger;
}

input {
  width: 15em;
  max-width: 95%;
}

select {
  width: 15.5em;
  max-width: 99%;
}

input[type="button"], input[type="submit"], input[type="reset"] {
	width: initial;
}

label {
  margin-right: 0.5em;
}

.right {
  float: right;
}

.p {
  margin: 0.15em;
}

.flex {
  display: flex;
}

.wrap {
  display: flex;
  flex-wrap: wrap;
}

form {
  display: flex;
  flex-direction: column;  
}

aside, footer {
  font-size: smaller;
}

ul {
  -webkit-padding-start: 2em;
}

